@@ -83,8 +83,6 @@ bool CGUIWindowVideoTitle::GetDirectory(const CStdString &strDirectory, CFileIte
     {
       // mark watched movies when showing all
       CStdString strTitle = movie.m_strTitle;
-      if (m_iShowMode == VIDEO_SHOW_ALL && movie.m_bWatched == true)
-        strTitle += " [W]";
       CFileItem *pItem = new CFileItem(strTitle);
       pItem->m_strPath = movie.m_strSearchString;
       pItem->m_strTitle=strTitle;
@@ -93,11 +91,14 @@ bool CGUIWindowVideoTitle::GetDirectory(const CStdString &strDirectory, CFileIte
 
       CStdString strThumb;
       CUtil::GetVideoThumbnail(movie.m_strIMDBNumber, strThumb);
+      
       if (CFile::Exists(strThumb))
         pItem->SetThumbnailImage(strThumb);
       pItem->m_fRating = movie.m_fRating;
       pItem->m_stTime.wYear = movie.m_iYear & 0xFFFF;
       pItem->m_strDVDLabel = movie.m_strDVDLabel;
+      if (!movie.m_bWatched)
+        pItem->SetOverlayImage(CGUIListItem::ICON_OVERLAY_UNWATCHED);
       items.Add(pItem);
     }
   }
